--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
-cachetools==4.2.1
-google-auth==1.27.0
-google-auth-oauthlib==0.4.2
-gspread==3.7.0
-oauthlib==3.1.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-requests-oauthlib==1.3.0
-rsa==4.7.2
+cachetools==5.5.0
+et_xmlfile==2.0.0
+google-auth==2.36.0
+google-auth-oauthlib==1.2.1
+gspread==6.1.4
+numpy==2.2.0
+oauthlib==3.2.2
+odfpy==1.4.1
+openpyxl==3.1.5
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+python-calamine==0.3.1
+pytz==2024.2
+pyxlsb==1.0.10
+requests-oauthlib==2.0.0
+rsa==4.9
+tzdata==2024.2
+xlrd==2.0.1
+XlsxWriter==3.2.0
